syntax = "proto3";

package github.com.diegoclair.codepix;

option go_package = "protofiles;pb";

service PixService {
    rpc AddPixKey(AddPixKeyRequest) returns (AddPixKeyResponse) {};
    rpc FindByID (FindByIDRequest) returns (FindByIDResponse){};
}

message AddPixKeyRequest {
    string kind = 1;
    string key = 2;
    string accountID = 3; 
}

message FindByIDRequest {
    string kind = 1;
    string key = 2;
}

message Account {
    string accountID = 1;
    string accountNumber = 2;
    string bankID = 3;
    string bankName = 4;
    string ownerName = 5;
    string createdAt = 6;
}

message FindByIDResponse {
    string id = 1;
    string kind = 2;
    string key = 3;
    Account account = 4;
    string createdAt = 5;
}

message AddPixKeyResponse {
    string id = 1;
    string status = 2;
    string error = 3;
}
